@@ -1,5 +1,7 @@
 Version 0.4 (2012-??-??):
  - Require PHP 5.3
+ - Errors while processing files are only written to the output.
+   No more smarty errors are triggered.
 
 Version 0.3.1 (2012-04-26):
  - Restore 5.2 compatibility (thanks @snaxor)
